Create html structure

--- a/index.html
+++ b/index.html
@@ -3,11 +3,93 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" href="assets/img/favicon.png">
     <title>Welcome to the City of Vitoria</title>
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.14.0/css/all.css" integrity="sha384-HzLeBuhoNPvSl5KYnjx0BT+WB0QEEqLprO+NBkkk5gbc67FTaL7XIGa2w1L0Xbgc" crossorigin="anonymous">
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
+    <div id="wrap">
+        <header>
+            <div class="container">
+                <div class="navbar">
+                    <a class="brand" href="index.html">
+                        <img src="assets/img/logo.png" alt="City of Vitoria">
+                    </a>
+                    <nav>
+                        <ul>
+                            <li class="active">
+                                <a class="active" href="index.html">Home</a>
+                            </li>
+                            <li>
+                                <a href="about.html">About</a>
+                            </li>
+                            <li>
+                                <a href="places.html">Places</a>
+                            </li>
+                            <li class="dropdown" >
+                                <a href="#" class="dropdown" >Services</a>
+                                <div class="dropdown-menu" >
+                                    <a href="#">Hotels & Inns</a>
+                                    <a href="#">Restaurants</a>
+                                </div>
+                            </li>
+                        </ul>
+                        <a href="#" class="login">
+                            <i class="far fa-user"></i>
+                        </a>
+                    </nav>
+                </div>
+            </div>
 
+            <div class="hero">
+                <div class="container">
+                    <div class="subtitle">WELCOME TO</div>
+                    <div class="title">VITORIA</div>
+                </div>
+            </div>
+        </header>
+        <main>
+
+            <section class="newsletter">
+                <div class="container">
+                    <div class="row">
+                        <div class="col-2">
+                            <h1>Newsletter</h1>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore saepe repellat sapiente velit mollitia voluptate vel.</p>
+                        </div>
+                        <div class="col-2">
+                            <form action="" class="newsletter-form">
+                                <input type="text" nam="" placeholder="Name" >
+                                <input type="text" nam="" placeholder="Email" >
+                                <button type="submit" class="btn btn-primary">Subscribe</button>
+                            </form>
+                        </div>
+                    </div>
+                </div>
+            </section>
+        </main>
+        <footer>
+            <div class="container">
+                <div class="row">
+                    <div class="col">
+                        <p>Designed for educatiotal purpose only.</p>
+                        <p>Images from joelmiranda.com / freepik.com</p>
+                    </div>
+                    <div class="col">
+                        <div class="social">
+                            <a href="https://facebook.com" target="_blank">
+                                <i class="fab fa-facebook-square"></i>
+                            </a>
+                            <a href="https://instagram.com" target="_blank">
+                                <i class="fab fa-instagram-square"></i>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </footer>
+    </div>
     <script src="assets/js/script.js"></script>
 </body>
 </html>
