Home page content

--- a/index.html
+++ b/index.html
@@ -41,15 +41,110 @@
                     </nav>
                 </div>
             </div>
+        </header>
+        <main id="home-page">
 
-            <div class="hero">
+            <section class="hero">
                 <div class="container">
                     <div class="subtitle">WELCOME TO</div>
                     <div class="title">VITORIA</div>
                 </div>
-            </div>
-        </header>
-        <main>
+            </section>
+
+            <section>
+                <div class="container">
+                    <h1 class="title-center">Discover the City</h1>
+                    <div class="row">
+                        <div class="col-3">
+                            <a href="" class="place-img">
+                                <img src="assets/img/city/beaches.jpg" alt="Paradise Places in Vitoria">
+                                <div class="content">
+                                    <p>PARADISE</p>
+                                    <h1>PLACES</h1>
+                                </div>
+                            </a>
+                        </div>
+                        <div class="col-3">
+                            <a href="" class="place-img">
+                                <img src="assets/img/city/food.jpg" alt="Traditional food in Vitoria">
+                                <div class="content">
+                                    <p>TRADITIONAL</p>
+                                    <h1>LOCAL FOOD</h1>
+                                </div>
+                            </a>
+                        </div>
+                        <div class="col-3">
+                            <a href="" class="place-img">
+                                <img src="assets/img/city/hotels.jpg" alt="Where to stay in Vitoria">
+                                <div class="content">
+                                    <p>WHERE TO STAY</p>
+                                    <h1>LOCAL FOOD</h1>
+                                </div>
+                            </a>
+                        </div>
+                    </div>
+                    <hr/>
+                    <div class="list-items">
+                        <img src="assets/img/services/hotels/hotel_1.jpg" alt="Bristol Hotels" >
+                        <div class="content">
+                            <a href="hotels.html" class="btn btn-primary float-right">Read more</a>
+                            <h2>Bristol Hotel</h2>
+                            <div class="ratings">
+                                <i class="fas fa-star active"></i>
+                                <i class="fas fa-star active"></i>
+                                <i class="fas fa-star active"></i>
+                                <i class="fas fa-star active"></i>
+                                <i class="fas fa-star"></i>
+                            </div>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam id reiciendis nisi dolorum voluptate accusantium! Iste explicabo, saepe neque inventore laborum sit eum? Neque esse magni, dolores reiciendis nostrum eaque!</p>
+                            <p>2001 Ave, Vitoria ES</p>
+                        </div>
+                    </div>
+                    <hr/>
+                    <div class="list-items">
+                        <img src="assets/img/services/hotels/hotel_2.jpg" alt="Bristol Hotels" >
+                        <div class="content">
+                            <a href="hotels.html" class="btn btn-primary float-right">Read more</a>
+                            <h2>IBIS Hotel</h2>
+                            <div class="ratings">
+                                <i class="fas fa-star active"></i>
+                                <i class="fas fa-star active"></i>
+                                <i class="fas fa-star active"></i>
+                                <i class="fas fa-star active"></i>
+                                <i class="fas fa-star"></i>
+                            </div>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam id reiciendis nisi dolorum voluptate accusantium! Iste explicabo, saepe neque inventore laborum sit eum? Neque esse magni, dolores reiciendis nostrum eaque!</p>
+                            <p>4002 Main Ave, Vitoria ES</p>
+                        </div>
+                    </div>
+                </div>
+            </section>
+
+            <section>
+                <div class="container news-list">
+                    <h1 class="title-center">Latest Local News</h1>
+                    <hr/>
+                    <div class="list-items">
+                        <img src="assets/img/news/news_1.jpg" alt="Bristol Hotels" >
+                        <div class="content">
+                            <p>2 days ago</p>
+                            <h2>Paul McCartney presents the "Out There" tour in Brazil</h2>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam id reiciendis nisi dolorum voluptate accusantium! Iste explicabo, saepe neque inventore laborum sit eum? Neque esse magni, dolores reiciendis nostrum eaque!</p>
+                            <a href="#" class="">Read more</a>
+                        </div>
+                    </div>
+                    <hr/>
+                    <div class="list-items">
+                        <img src="assets/img/news/news_2.jpg" alt="Bristol Hotels" >
+                        <div class="content">
+                            <p>1 month ago</p>
+                            <h2>Title news with some Lorem ipsum dolor sit amet</h2>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam id reiciendis nisi dolorum voluptate accusantium! Iste explicabo, saepe neque inventore laborum sit eum? Neque esse magni, dolores reiciendis nostrum eaque!</p>
+                            <a href="#" class="">Read more</a>
+                        </div>
+                    </div>
+                </div>
+            </section>
 
             <section class="newsletter">
                 <div class="container">
