--- a/index.html
+++ b/index.html
@@ -149,11 +149,11 @@
             <section class="newsletter">
                 <div class="container">
                     <div class="row">
-                        <div class="col-2">
+                        <div class="col">
                             <h1>Newsletter</h1>
                             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore saepe repellat sapiente velit mollitia voluptate vel.</p>
                         </div>
-                        <div class="col-2">
+                        <div class="col">
                             <form action="" class="newsletter-form">
                                 <input type="text" nam="" placeholder="Name" >
                                 <input type="text" nam="" placeholder="Email" >
