--- a/about.html
+++ b/about.html
@@ -30,8 +30,8 @@
                             <li class="dropdown" >
                                 <a href="#" class="dropdown" >Services</a>
                                 <div class="dropdown-menu" >
-                                    <a href="#">Hotels & Inns</a>
-                                    <a href="#">Restaurants</a>
+                                    <a href="hotels.html">Hotels & Inns</a>
+                                    <a href="restaurants.html">Restaurants</a>
                                 </div>
                             </li>
                         </ul>
