--- a/restaurants.html
+++ b/restaurants.html
@@ -52,7 +52,7 @@
                 <div class="container">
                     <div class="row">
                         <div class="col">
-                            <a href="" class="place-img">
+                            <a href="restaurant-details.html" class="place-img">
                                 <img src="assets/img/services/restaurants/restaurant_1.jpg" alt="Restaurant Name">
                                 <div class="content">
                                     <h2>Lorem Ipsum</h2>
@@ -68,7 +68,7 @@
                             </a>
                         </div>
                         <div class="col">
-                            <a href="" class="place-img">
+                            <a href="restaurant-details.html" class="place-img">
                                 <img src="assets/img/services/restaurants/restaurant_2.jpg" alt="Restaurant Name">
                                 <div class="content">
                                     <h2>Lorem Ipsum</h2>
@@ -84,7 +84,7 @@
                             </a>
                         </div>
                         <div class="col">
-                            <a href="" class="place-img">
+                            <a href="restaurant-details.html" class="place-img">
                                 <img src="assets/img/services/restaurants/restaurant_3.jpg" alt="Restaurant Name">
                                 <div class="content">
                                     <h2>Lorem Ipsum</h2>
@@ -100,7 +100,7 @@
                             </a>
                         </div>
                         <div class="col">
-                            <a href="" class="place-img">
+                            <a href="restaurant-details.html" class="place-img">
                                 <img src="assets/img/services/restaurants/restaurant_4.jpg" alt="Restaurant Name">
                                 <div class="content">
                                     <h2>Lorem Ipsum</h2>
@@ -116,7 +116,7 @@
                             </a>
                         </div>
                         <div class="col">
-                            <a href="" class="place-img">
+                            <a href="restaurant-details.html" class="place-img">
                                 <img src="assets/img/services/restaurants/restaurant_5.jpg" alt="Restaurant Name">
                                 <div class="content">
                                     <h2>Lorem Ipsum</h2>
@@ -132,7 +132,7 @@
                             </a>
                         </div>
                         <div class="col">
-                            <a href="" class="place-img">
+                            <a href="restaurant-details.html" class="place-img">
                                 <img src="assets/img/services/restaurants/restaurant_6.jpg" alt="Restaurant Name">
                                 <div class="content">
                                     <h2>Lorem Ipsum</h2>
@@ -148,7 +148,7 @@
                             </a>
                         </div>
                         <div class="col">
-                            <a href="" class="place-img">
+                            <a href="restaurant-details.html" class="place-img">
                                 <img src="assets/img/services/restaurants/restaurant_7.jpg" alt="Restaurant Name">
                                 <div class="content">
                                     <h2>Lorem Ipsum</h2>
@@ -164,7 +164,7 @@
                             </a>
                         </div>
                         <div class="col">
-                            <a href="" class="place-img">
+                            <a href="restaurant-details.html" class="place-img">
                                 <img src="assets/img/services/restaurants/restaurant_8.jpg" alt="Restaurant Name">
                                 <div class="content">
                                     <h2>Lorem Ipsum</h2>
@@ -180,7 +180,7 @@
                             </a>
                         </div>
                         <div class="col">
-                            <a href="" class="place-img">
+                            <a href="restaurant-details.html" class="place-img">
                                 <img src="assets/img/services/restaurants/restaurant_9.jpg" alt="Restaurant Name">
                                 <div class="content">
                                     <h2>Lorem Ipsum</h2>
