Fix image on hotel page

--- a/hotel-details.html
+++ b/hotel-details.html
@@ -96,7 +96,7 @@
                             </div>
                         </div>
                         <div class="col">
-                            <img src="assets/img/services/restaurants/restaurant_1.jpg" alt="About Restaurant">
+                            <img src="assets/img/services/hotels/hotel_1.jpg" alt="About Hotel">
                         </div>
                     </div>
                 </div>
