Header pages CSS

--- a/about.html
+++ b/about.html
@@ -46,12 +46,16 @@
 
             <section class="page-header">
                 <div class="container">
-                    <div class="title">About</div>
+                    <div class="row">
+                        <div class="col">
+                            <h1>About</h1>
+                        </div>
+                    </div>
                 </div>
             </section>
 
             <div class="page-with-sidebar">
-                <div class="page-content">
+                <div class="container page-content">
                     <section id="about">
                         <h2>Lorem ipsum dolor</h2>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore sed nesciunt laborum ab eius error suscipit veritatis quaerat, ea officiis, perspiciatis ullam iste velit minima architecto non magnam? Voluptatem, alias?</p>
