--- a/restaurant-details.html
+++ b/restaurant-details.html
@@ -42,13 +42,13 @@
                 </div>
             </div>
         </header>
-        <main id="restaurant-page">
+        <main id="restaurant-info-page">
             <section class="page-header">
                 <div class="container">
                     <div class="row">
                         <div class="col">
                             <p>Restaurant</p>
-                            <div class="title">Restaurant Name</div>
+                            <h2>Restaurant Name</h2>
                         </div>
                         <div class="col">
                             <div class="ratings">
@@ -58,6 +58,7 @@
                                 <i class="fas fa-star active"></i>
                                 <i class="fas fa-star"></i>
                             </div>
+                            <p>2 Reviews</p>
                         </div>
                     </div>
                 </div>
