--- a/hotel-details.html
+++ b/hotel-details.html
@@ -28,7 +28,7 @@
                                 <a href="places.html">Places</a>
                             </li>
                             <li class="dropdown" >
-                                <a href="#" class="dropdown" class="active" >Services</a>
+                                <a href="#" class="dropdown active" >Services</a>
                                 <div class="dropdown-menu" >
                                     <a href="hotels.html">Hotels & Inns</a>
                                     <a href="restaurants.html">Restaurants</a>
@@ -42,13 +42,13 @@
                 </div>
             </div>
         </header>
-        <main id="hotel-page">
+        <main id="hotel-info-page">
             <section class="page-header">
                 <div class="container">
                     <div class="row">
                         <div class="col">
                             <p>Hotel</p>
-                            <div class="title">Hotel Name</div>
+                            <h2>Hotel Name</h2>
                         </div>
                         <div class="col">
                             <div class="ratings">
@@ -58,6 +58,7 @@
                                 <i class="fas fa-star active"></i>
                                 <i class="fas fa-star"></i>
                             </div>
+                            <p>2 Reviews</p>
                         </div>
                     </div>
                 </div>
