--- a/hotels.html
+++ b/hotels.html
@@ -28,7 +28,7 @@
                                 <a href="places.html">Places</a>
                             </li>
                             <li class="dropdown" >
-                                <a href="#" class="dropdown" class="active" >Services</a>
+                                <a href="#" class="dropdown active" >Services</a>
                                 <div class="dropdown-menu" >
                                     <a href="hotels.html">Hotels & Inns</a>
                                     <a href="restaurants.html">Restaurants</a>
@@ -45,7 +45,11 @@
         <main id="hotels-page">
             <section class="page-header">
                 <div class="container">
-                    <div class="title">Hotels</div>
+                    <div class="row">
+                        <div class="col">
+                            <h1>Hotels</h1>
+                        </div>
+                    </div>
                 </div>
             </section>
             <section>
