--- a/places.html
+++ b/places.html
@@ -45,7 +45,11 @@
         <main id="places-page">
             <section class="page-header">
                 <div class="container">
-                    <div class="title">Places</div>
+                    <div class="row">
+                        <div class="col">
+                            <h1>Places</h1>
+                        </div>
+                    </div>
                 </div>
             </section>
             <section>
