--- a/restaurants.html
+++ b/restaurants.html
@@ -28,7 +28,7 @@
                                 <a href="places.html">Places</a>
                             </li>
                             <li class="dropdown" >
-                                <a href="#" class="dropdown" class="active" >Services</a>
+                                <a href="#" class="dropdown active" >Services</a>
                                 <div class="dropdown-menu" >
                                     <a href="hotels.html">Hotels & Inns</a>
                                     <a href="restaurants.html">Restaurants</a>
@@ -42,10 +42,14 @@
                 </div>
             </div>
         </header>
-        <main id="hotels-page">
+        <main id="restaurants-page">
             <section class="page-header">
                 <div class="container">
-                    <div class="title">Restaurants</div>
+                    <div class="row">
+                        <div class="col">
+                            <h1>Restaurants</h1>
+                        </div>
+                    </div>
                 </div>
             </section>
             <section>
