--- a/places.html
+++ b/places.html
@@ -66,7 +66,7 @@
                     </div>
                 </div>
             </section>
-            <section>
+            <section class="bg-light">
                 <div class="container">
                     <div class="row">
                         <div class="col">
