--- a/about.html
+++ b/about.html
@@ -43,7 +43,6 @@
             </div>
         </header>
         <main id="about-page">
-
             <section class="page-header">
                 <div class="container">
                     <div class="row">
@@ -53,64 +52,63 @@
                     </div>
                 </div>
             </section>
-
-            <div class="page-with-sidebar">
-                <div class="container page-content">
-                    <section id="about">
-                        <h2>Lorem ipsum dolor</h2>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore sed nesciunt laborum ab eius error suscipit veritatis quaerat, ea officiis, perspiciatis ullam iste velit minima architecto non magnam? Voluptatem, alias?</p>
-                        <img src="assets/img/city/about.jpg" alt="City of Vitoria">
-                    </section>
-                    <section id="history">
-                        <h2>Lorem ipsum dolor</h2>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore sed nesciunt laborum ab eius error suscipit veritatis quaerat, ea officiis, perspiciatis ullam iste velit minima architecto non magnam? Voluptatem, alias?</p>
-                        <div class="row">
-                            <div class="col-3">
-                                <img src="assets/img/city/history_1.jpg" alt="History of Vitoria">
+            <div class="container" >
+                <div class="page-with-sidebar">
+                    <div class="page-content">
+                        <section id="about">
+                            <h2>Lorem ipsum dolor</h2>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore sed nesciunt laborum ab eius error suscipit veritatis quaerat, ea officiis, perspiciatis ullam iste velit minima architecto non magnam? Voluptatem, alias?</p>
+                            <img src="assets/img/city/about.jpg" alt="City of Vitoria">
+                        </section>
+                        <section id="history">
+                            <h2>History</h2>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore sed nesciunt laborum ab eius error suscipit veritatis quaerat, ea officiis, perspiciatis ullam iste velit minima architecto non magnam? Voluptatem, alias?</p>
+                            <div class="row">
+                                <div class="col-3">
+                                    <img src="assets/img/city/history_1.jpg" alt="History of Vitoria">
+                                </div>
+                                <div class="col-3">
+                                    <img src="assets/img/city/history_2.jpg" alt="History of Vitoria">
+                                </div>
+                                <div class="col-3">
+                                    <img src="assets/img/city/history_3.jpg" alt="History of Vitoria">
+                                </div>
                             </div>
-                            <div class="col-3">
-                                <img src="assets/img/city/history_2.jpg" alt="History of Vitoria">
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore sed nesciunt laborum ab eius error suscipit veritatis quaerat, ea officiis, perspiciatis ullam iste velit minima architecto non magnam? Voluptatem, alias?</p>
+                        </section>
+                        <section id="weather">
+                            <h2>Weather</h2>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore sed nesciunt laborum ab eius error suscipit veritatis quaerat, ea officiis, perspiciatis ullam iste velit minima architecto non magnam? Voluptatem, alias?</p>
+                            <div class="row">
+                                <div class="col-4 text-center">
+                                    <img src="assets/img/icons/summer.svg" alt="Summer">
+                                    <h3>Summer</h3>
+                                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                                </div>
+                                <div class="col-4 text-center">
+                                    <img src="assets/img/icons/autumn.svg" alt="Autumn">
+                                    <h3>Autumn</h3>
+                                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                                </div>
+                                <div class="col-4 text-center">
+                                    <img src="assets/img/icons/winter.svg" alt="Winter">
+                                    <h3>Winter</h3>
+                                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                                </div>
+                                <div class="col-4 text-center">
+                                    <img src="assets/img/icons/spring.svg" alt="Spring">
+                                    <h3>Spring</h3>
+                                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                                </div>
                             </div>
-                            <div class="col-3">
-                                <img src="assets/img/city/history_3.jpg" alt="History of Vitoria">
-                            </div>
-                        </div>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore sed nesciunt laborum ab eius error suscipit veritatis quaerat, ea officiis, perspiciatis ullam iste velit minima architecto non magnam? Voluptatem, alias?</p>
-                    </section>
-                    <section id="weather">
-                        <h2>Weather</h2>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore sed nesciunt laborum ab eius error suscipit veritatis quaerat, ea officiis, perspiciatis ullam iste velit minima architecto non magnam? Voluptatem, alias?</p>
-                        <div class="row">
-                            <div class="col-4">
-                                <img src="assets/img/icons/summer.svg" alt="Summer">
-                                <h5>Summer</h5>
-                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-                            </div>
-                            <div class="col-4">
-                                <img src="assets/img/icons/autumn.svg" alt="Autumn">
-                                <h5>Autumn</h5>
-                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-                            </div>
-                            <div class="col-4">
-                                <img src="assets/img/icons/winter.svg" alt="Winter">
-                                <h5>Winter</h5>
-                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-                            </div>
-                            <div class="col-4">
-                                <img src="assets/img/icons/spring.svg" alt="Spring">
-                                <h5>Spring</h5>
-                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-                            </div>
-                        </div>
-                    </section>
-                    <section id="map">
-                        <h2>Map</h2>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-                        <img src="assets/img/city/city_map.jpg" alt="City of Vitoria">
-                    </section>
-                </div>
-                <div class="page-sidebar">
-                    <div class="menu">
+                        </section>
+                        <section id="map">
+                            <h2>Map</h2>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                            <img src="assets/img/city/city_map.jpg" alt="City of Vitoria">
+                        </section>
+                    </div>
+                    <div class="page-sidebar">
                         <ul>
                             <li>
                                 <a href="#about-page">About</a>
