Style of the services list

--- a/hotels.html
+++ b/hotels.html
@@ -54,8 +54,8 @@
             </section>
             <section>
                 <div class="container">
-                    <div class="row">
-                        <div class="col">
+                    <div class="services-list">
+                        <div class="service-item">
                             <a href="hotel-details.html" class="place-img">
                                 <img src="assets/img/services/hotels/hotel_1.jpg" alt="Hotel Name">
                                 <div class="content">
@@ -71,7 +71,7 @@
                                 </div>
                             </a>
                         </div>
-                        <div class="col">
+                        <div class="service-item">
                             <a href="hotel-details.html" class="place-img">
                                 <img src="assets/img/services/hotels/hotel_2.jpg" alt="Hotel Name">
                                 <div class="content">
@@ -87,7 +87,7 @@
                                 </div>
                             </a>
                         </div>
-                        <div class="col">
+                        <div class="service-item">
                             <a href="hotel-details.html" class="place-img">
                                 <img src="assets/img/services/hotels/hotel_3.jpg" alt="Hotel Name">
                                 <div class="content">
@@ -103,7 +103,7 @@
                                 </div>
                             </a>
                         </div>
-                        <div class="col">
+                        <div class="service-item">
                             <a href="hotel-details.html" class="place-img">
                                 <img src="assets/img/services/hotels/hotel_4.jpg" alt="Hotel Name">
                                 <div class="content">
@@ -119,7 +119,7 @@
                                 </div>
                             </a>
                         </div>
-                        <div class="col">
+                        <div class="service-item">
                             <a href="hotel-details.html" class="place-img">
                                 <img src="assets/img/services/hotels/hotel_5.jpg" alt="Hotel Name">
                                 <div class="content">
@@ -135,7 +135,7 @@
                                 </div>
                             </a>
                         </div>
-                        <div class="col">
+                        <div class="service-item">
                             <a href="hotel-details.html" class="place-img">
                                 <img src="assets/img/services/hotels/hotel_6.jpg" alt="Hotel Name">
                                 <div class="content">
@@ -151,7 +151,7 @@
                                 </div>
                             </a>
                         </div>
-                        <div class="col">
+                        <div class="service-item">
                             <a href="hotel-details.html" class="place-img">
                                 <img src="assets/img/services/hotels/hotel_7.jpg" alt="Hotel Name">
                                 <div class="content">
@@ -167,7 +167,7 @@
                                 </div>
                             </a>
                         </div>
-                        <div class="col">
+                        <div class="service-item">
                             <a href="hotel-details.html" class="place-img">
                                 <img src="assets/img/services/hotels/hotel_8.jpg" alt="Hotel Name">
                                 <div class="content">
@@ -183,7 +183,7 @@
                                 </div>
                             </a>
                         </div>
-                        <div class="col">
+                        <div class="service-item">
                             <a href="hotel-details.html" class="place-img">
                                 <img src="assets/img/services/hotels/hotel_9.jpg" alt="Hotel Name">
                                 <div class="content">
