--- a/restaurants.html
+++ b/restaurants.html
@@ -54,8 +54,8 @@
             </section>
             <section>
                 <div class="container">
-                    <div class="row">
-                        <div class="col">
+                    <div class="services-list">
+                        <div class="service-item">
                             <a href="restaurant-details.html" class="place-img">
                                 <img src="assets/img/services/restaurants/restaurant_1.jpg" alt="Restaurant Name">
                                 <div class="content">
@@ -66,12 +66,12 @@
                                         <i class="fas fa-star active"></i>
                                         <i class="fas fa-star active"></i>
                                         <i class="fas fa-star active"></i>
-                                        <i class="fas fa-star"></i>
+                                        <i class="fas fa-star active"></i>
                                     </div>
                                 </div>
                             </a>
                         </div>
-                        <div class="col">
+                        <div class="service-item">
                             <a href="restaurant-details.html" class="place-img">
                                 <img src="assets/img/services/restaurants/restaurant_2.jpg" alt="Restaurant Name">
                                 <div class="content">
@@ -87,7 +87,7 @@
                                 </div>
                             </a>
                         </div>
-                        <div class="col">
+                        <div class="service-item">
                             <a href="restaurant-details.html" class="place-img">
                                 <img src="assets/img/services/restaurants/restaurant_3.jpg" alt="Restaurant Name">
                                 <div class="content">
@@ -98,12 +98,12 @@
                                         <i class="fas fa-star active"></i>
                                         <i class="fas fa-star active"></i>
                                         <i class="fas fa-star active"></i>
-                                        <i class="fas fa-star"></i>
+                                        <i class="fas fa-star active"></i>
                                     </div>
                                 </div>
                             </a>
                         </div>
-                        <div class="col">
+                        <div class="service-item">
                             <a href="restaurant-details.html" class="place-img">
                                 <img src="assets/img/services/restaurants/restaurant_4.jpg" alt="Restaurant Name">
                                 <div class="content">
@@ -113,13 +113,13 @@
                                         <i class="fas fa-star active"></i>
                                         <i class="fas fa-star active"></i>
                                         <i class="fas fa-star active"></i>
-                                        <i class="fas fa-star active"></i>
+                                        <i class="fas fa-star"></i>
                                         <i class="fas fa-star"></i>
                                     </div>
                                 </div>
                             </a>
                         </div>
-                        <div class="col">
+                        <div class="service-item">
                             <a href="restaurant-details.html" class="place-img">
                                 <img src="assets/img/services/restaurants/restaurant_5.jpg" alt="Restaurant Name">
                                 <div class="content">
@@ -130,12 +130,12 @@
                                         <i class="fas fa-star active"></i>
                                         <i class="fas fa-star active"></i>
                                         <i class="fas fa-star active"></i>
-                                        <i class="fas fa-star"></i>
+                                        <i class="fas fa-star active"></i>
                                     </div>
                                 </div>
                             </a>
                         </div>
-                        <div class="col">
+                        <div class="service-item">
                             <a href="restaurant-details.html" class="place-img">
                                 <img src="assets/img/services/restaurants/restaurant_6.jpg" alt="Restaurant Name">
                                 <div class="content">
@@ -151,7 +151,7 @@
                                 </div>
                             </a>
                         </div>
-                        <div class="col">
+                        <div class="service-item">
                             <a href="restaurant-details.html" class="place-img">
                                 <img src="assets/img/services/restaurants/restaurant_7.jpg" alt="Restaurant Name">
                                 <div class="content">
@@ -161,13 +161,13 @@
                                         <i class="fas fa-star active"></i>
                                         <i class="fas fa-star active"></i>
                                         <i class="fas fa-star active"></i>
-                                        <i class="fas fa-star active"></i>
+                                        <i class="fas fa-star"></i>
                                         <i class="fas fa-star"></i>
                                     </div>
                                 </div>
                             </a>
                         </div>
-                        <div class="col">
+                        <div class="service-item">
                             <a href="restaurant-details.html" class="place-img">
                                 <img src="assets/img/services/restaurants/restaurant_8.jpg" alt="Restaurant Name">
                                 <div class="content">
@@ -183,7 +183,7 @@
                                 </div>
                             </a>
                         </div>
-                        <div class="col">
+                        <div class="service-item">
                             <a href="restaurant-details.html" class="place-img">
                                 <img src="assets/img/services/restaurants/restaurant_9.jpg" alt="Restaurant Name">
                                 <div class="content">
@@ -193,7 +193,7 @@
                                         <i class="fas fa-star active"></i>
                                         <i class="fas fa-star active"></i>
                                         <i class="fas fa-star active"></i>
-                                        <i class="fas fa-star active"></i>
+                                        <i class="fas fa-star"></i>
                                         <i class="fas fa-star"></i>
                                     </div>
                                 </div>
