--- a/restaurant-details.html
+++ b/restaurant-details.html
@@ -28,7 +28,7 @@
                                 <a href="places.html">Places</a>
                             </li>
                             <li class="dropdown" >
-                                <a href="#" class="dropdown" class="active" >Services</a>
+                                <a href="#" class="dropdown active" >Services</a>
                                 <div class="dropdown-menu" >
                                     <a href="hotels.html">Hotels & Inns</a>
                                     <a href="restaurants.html">Restaurants</a>
@@ -65,24 +65,33 @@
             </section>
             <section>
                 <div class="container">
-                    <div class="row">
-                        <div class="col">
+                    <div class="service-detail">
+                        <div class="content">
                             <h2>DESCRIPTION</h2>
                             <hr/>
                             <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Inventore assumenda voluptatum cupiditate doloremque. Sint velit, harum ad libero magni facere excepturi recusandae, eos perspiciatis vel, voluptas illo consequuntur odio laboriosam!</p>
-                            <h4>LOCATION</h4>
-                            <p>Full Address - City name, Zip Code</p>
-                            <p>Province - Country</p>
-                            <a href="#" >View on map</a>
-                            <br/>
+                            <div class="features">
+                                <span class="badget">Parking</span>
+                                <span class="badget">WI-FI</span>
+                                <span class="badget">Live Music</span>
+                            </div>
                             <h4>CONTACT</h4>
                             <p><big>+55 27 3000-4000</big></p>
-                            <br/>
-                            <h2>USER REVIEWS</h2>
-                            <hr/>
-                            <div class="user-reviews">
-                                <img src="assets/img/icons/quotes.svg" alt="Comments">
-                                <h4>Lorem ipsum</h4>
+                            <h4>LOCATION</h4>
+                            <p>220 Main Ave, Vitoria, Zip 29210-100<br/>Espirito Santo - Brazil</p>
+                            <a href="#" class="link" >View on map</a>
+                        </div>
+                        <div class="image">
+                            <img src="assets/img/services/restaurants/restaurant_1.jpg" alt="About Restaurant">
+                        </div>
+                    </div>
+                    <div class="service-reviews">
+                        <h2>USER REVIEWS</h2>
+                        <hr/>
+                        <div class="row">
+                            <img class="quotes" src="assets/img/icons/quotes.svg" alt="Comments">
+                            <div>
+                                <h3>Lorem ipsum</h3>
                                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae eveniet excepturi placeat facilis, deleniti voluptate accusamus natus aspernatur dolorem sit, cupiditate consequuntur quis? Veritatis laborum eius dolorem velit, molestias perferendis.</p>
                                 <div class="ratings">
                                     <i class="fas fa-star active"></i>
@@ -92,12 +101,9 @@
                                     <i class="fas fa-star"></i>
                                 </div>
                                 <p>
-                                    <strong>User Name</strong> | August 20, 2020
+                                    <strong>User Name</strong> &nbsp; | &nbsp; August 20, 2020
                                 </p>
                             </div>
-                        </div>
-                        <div class="col">
-                            <img src="assets/img/services/restaurants/restaurant_1.jpg" alt="About Restaurant">
                         </div>
                     </div>
                 </div>
