Add shadow on images

--- a/about.html
+++ b/about.html
@@ -58,20 +58,20 @@
                         <section id="about">
                             <h2>Lorem ipsum dolor</h2>
                             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore sed nesciunt laborum ab eius error suscipit veritatis quaerat, ea officiis, perspiciatis ullam iste velit minima architecto non magnam? Voluptatem, alias?</p>
-                            <img src="assets/img/city/about.jpg" alt="City of Vitoria">
+                            <img src="assets/img/city/about.jpg" class="shadow" alt="City of Vitoria">
                         </section>
                         <section id="history">
                             <h2>History</h2>
                             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore sed nesciunt laborum ab eius error suscipit veritatis quaerat, ea officiis, perspiciatis ullam iste velit minima architecto non magnam? Voluptatem, alias?</p>
                             <div class="row">
                                 <div class="col-3">
-                                    <img src="assets/img/city/history_1.jpg" alt="History of Vitoria">
+                                    <img src="assets/img/city/history_1.jpg" class="shadow" alt="History of Vitoria">
                                 </div>
                                 <div class="col-3">
-                                    <img src="assets/img/city/history_2.jpg" alt="History of Vitoria">
+                                    <img src="assets/img/city/history_2.jpg" class="shadow" alt="History of Vitoria">
                                 </div>
                                 <div class="col-3">
-                                    <img src="assets/img/city/history_3.jpg" alt="History of Vitoria">
+                                    <img src="assets/img/city/history_3.jpg" class="shadow" alt="History of Vitoria">
                                 </div>
                             </div>
                             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore sed nesciunt laborum ab eius error suscipit veritatis quaerat, ea officiis, perspiciatis ullam iste velit minima architecto non magnam? Voluptatem, alias?</p>
