--- a/places.html
+++ b/places.html
@@ -61,7 +61,7 @@
                             <a href="#" class="btn btn-primary" >Read more</a>
                         </div>
                         <div class="col">
-                            <img src="assets/img/places/beach.jpg" alt="Paradise Beaches">
+                            <img src="assets/img/places/beach.jpg" class="shadow" alt="Paradise Beaches">
                         </div>
                     </div>
                 </div>
@@ -70,7 +70,7 @@
                 <div class="container">
                     <div class="row">
                         <div class="col">
-                            <img src="assets/img/places/park.jpg" alt="City Parks">
+                            <img src="assets/img/places/park.jpg" class="shadow" alt="City Parks">
                         </div>
                         <div class="col">
                             <h2>City Parks</h2>
@@ -89,7 +89,7 @@
                             <a href="#" class="btn btn-primary" >Read more</a>
                         </div>
                         <div class="col">
-                            <img src="assets/img/places/church.jpg" alt="Historic Church">
+                            <img src="assets/img/places/church.jpg" class="shadow" alt="Historic Church">
                         </div>
                     </div>
                 </div>
