--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                     <div class="row">
                         <div class="col-3">
                             <a href="" class="place-img">
-                                <img src="assets/img/city/beaches.jpg" alt="Paradise Places in Vitoria">
+                                <img src="assets/img/city/beaches.jpg" class="shadow" alt="Paradise Places in Vitoria">
                                 <div class="content">
                                     <p>PARADISE</p>
                                     <h1>PLACES</h1>
@@ -66,7 +66,7 @@
                         </div>
                         <div class="col-3">
                             <a href="" class="place-img">
-                                <img src="assets/img/city/food.jpg" alt="Traditional food in Vitoria">
+                                <img src="assets/img/city/food.jpg" class="shadow" alt="Traditional food in Vitoria">
                                 <div class="content">
                                     <p>TRADITIONAL</p>
                                     <h1>LOCAL FOOD</h1>
@@ -75,7 +75,7 @@
                         </div>
                         <div class="col-3">
                             <a href="" class="place-img">
-                                <img src="assets/img/city/hotels.jpg" alt="Where to stay in Vitoria">
+                                <img src="assets/img/city/hotels.jpg" class="shadow" alt="Where to stay in Vitoria">
                                 <div class="content">
                                     <p>WHERE TO STAY</p>
                                     <h1>LOCAL FOOD</h1>
@@ -85,7 +85,7 @@
                     </div>
                     <hr/>
                     <div class="list-items">
-                        <img src="assets/img/services/hotels/hotel_1.jpg" alt="Bristol Hotels" >
+                        <img src="assets/img/services/hotels/hotel_1.jpg" class="shadow" alt="Bristol Hotels" >
                         <div class="content">
                             <a href="hotels.html" class="btn btn-primary float-right">Read more</a>
                             <h2>Bristol Hotel</h2>
@@ -102,7 +102,7 @@
                     </div>
                     <hr/>
                     <div class="list-items">
-                        <img src="assets/img/services/hotels/hotel_2.jpg" alt="Bristol Hotels" >
+                        <img src="assets/img/services/hotels/hotel_2.jpg" class="shadow" alt="Bristol Hotels" >
                         <div class="content">
                             <a href="hotels.html" class="btn btn-primary float-right">Read more</a>
                             <h2>IBIS Hotel</h2>
@@ -125,22 +125,22 @@
                     <h1 class="title-center">Latest Local News</h1>
                     <hr/>
                     <div class="list-items">
-                        <img src="assets/img/news/news_1.jpg" alt="Bristol Hotels" >
+                        <img src="assets/img/news/news_1.jpg" class="shadow" alt="Bristol Hotels" >
                         <div class="content">
                             <p>2 days ago</p>
                             <h2>Paul McCartney presents the "Out There" tour in Brazil</h2>
                             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam id reiciendis nisi dolorum voluptate accusantium! Iste explicabo, saepe neque inventore laborum sit eum? Neque esse magni, dolores reiciendis nostrum eaque!</p>
-                            <a href="#" class="">Read more</a>
+                            <a href="#" class="link">Read more</a>
                         </div>
                     </div>
                     <hr/>
                     <div class="list-items">
-                        <img src="assets/img/news/news_2.jpg" alt="Bristol Hotels" >
+                        <img src="assets/img/news/news_2.jpg" class="shadow" alt="Bristol Hotels" >
                         <div class="content">
                             <p>1 month ago</p>
                             <h2>Title news with some Lorem ipsum dolor sit amet</h2>
                             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam id reiciendis nisi dolorum voluptate accusantium! Iste explicabo, saepe neque inventore laborum sit eum? Neque esse magni, dolores reiciendis nostrum eaque!</p>
-                            <a href="#" class="">Read more</a>
+                            <a href="#" class="link">Read more</a>
                         </div>
                     </div>
                 </div>
