--- a/about.html
+++ b/about.html
@@ -59,6 +59,10 @@
                             <h2>Lorem ipsum dolor</h2>
                             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore sed nesciunt laborum ab eius error suscipit veritatis quaerat, ea officiis, perspiciatis ullam iste velit minima architecto non magnam? Voluptatem, alias?</p>
                             <img src="assets/img/city/about.jpg" class="shadow" alt="City of Vitoria">
+                            <p>
+                                Learn more at:
+                                <a class="link" target="_blank" href="https://en.wikipedia.org/wiki/Vit%C3%B3ria,_Esp%C3%ADrito_Santo" >https://en.wikipedia.org/wiki/Vitória,_Espírito_Santo</a>
+                            </p>
                         </section>
                         <section id="history">
                             <h2>History</h2>
@@ -77,7 +81,7 @@
                             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore sed nesciunt laborum ab eius error suscipit veritatis quaerat, ea officiis, perspiciatis ullam iste velit minima architecto non magnam? Voluptatem, alias?</p>
                         </section>
                         <section id="weather">
-                            <h2>Weather</h2>
+                            <h2>Climate</h2>
                             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore sed nesciunt laborum ab eius error suscipit veritatis quaerat, ea officiis, perspiciatis ullam iste velit minima architecto non magnam? Voluptatem, alias?</p>
                             <div class="row">
                                 <div class="col-4 text-center">
